# CPPGrader

./: .gitignore  CMakeLists.txt  CppCompiler.cpp  CppCompiler.h  CppExecutor.cpp  CppExecutor.h  CppGrader.cpp  CppGrader.h  GraderApp.cpp  GraderApp.h  ProblemConfig.ini  README.md  main.cpp  util.cpp  util.h
complier/: CppCompiler.cpp  CppCompiler.h  DefaultCompiler.cpp  DefaultCompiler.h  EachCompiler.cpp  EachCompiler.h
etc/: Problem.cpp  Problem.h  TestCase.cpp  TestCase.h  util.cpp  util.h
executor/: CppExecutor.cpp  CppExecutor.h
grader/: CppGrader.cpp  CppGrader.h
